finished project, and adding all new text from David B. Still todo, all of the syncing to cloud for new data objects
dj 04292022

--- a/Fire Journal.xcodeproj/xcshareddata/xcschemes/Fire Journal 1.xcscheme
+++ b/Fire Journal.xcodeproj/xcshareddata/xcschemes/Fire Journal 1.xcscheme
@@ -54,7 +54,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "com.apple.CoreData.SQLDebug 1"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "com.apple.CoreData.MigrationDebug"
@@ -62,9 +62,26 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "com.apple.CoreData.ConcurrencyDebugged1"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "SQLITE_ENABLE_THREAD_ASSERTIONS"
+            value = "1"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "SQLITE_AUTO_TRACE"
+            value = "1"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "SQLITE_ENABLE_FILE_ASSERTIONS"
+            value = "1"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
